# aion

./: .gitignore  ARCHITECTURE.md  README.md  requirements.txt
server/: README.md  pyproject.toml  run_md_direct.py  run_pipeline.py
server/app/: __init__.py  main.py
server/app/agents/: __init__.py  catalog.py
server/app/agents/base/: __init__.py  (+6 more)
server/app/api/: __init__.py
server/app/core/: config.py  constants.py  exceptions.py  logger.py  security.py  startup.py
server/app/database/: __init__.py
server/app/llm/: __init__.py  base.py  cache.py  exceptions.py  factory.py  manager.py  models.py  parser.py  prompt_engine.py
server/app/memory/: __init__.py
server/app/models/: __init__.py  domain.py
server/app/runtime/: __init__.py
server/app/schemas/: __init__.py  business_dna.py  domain.py  external.py  market_discovery.py  missions.py  planner.py  recommendations.py  strategy.py
server/app/services/: __init__.py  agent.py  business_dna.py  company.py  company_extractor.py  firecrawl_service.py  knowledge_graph.py  market_discovery_service.py  mission.py  mission_orchestrator.py  planner.py  recommendation.py  signal.py  strategy_service.py  tavily_service.py
server/app/supabase/: __init__.py  client.py
server/app/utils/: graph_builder.py  graph_validator.py
server/migrations/: 002_business_dna_and_recommendations.sql
server/sql/: market_discovery_results.sql
server/tests/: __init__.py  test_agent_registry.py  test_external_services.py  test_health.py  test_llm_runtime.py  test_market_discovery.py  test_planner.py  test_strategy.py
(+76 files in other folders)
